# swipesonic

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  http.mm  main.cpp  spotify_bridge.hpp
